# chksum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
firedbg/: target.json
src/: datetime.rs  errors.rs  files.rs  hash.rs  main.rs
src/tasks/: duplicates.rs  mod.rs  stats.rs
